kustomize/overlays/api/mrfylke-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-okonomi-regnskap
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`api.felleskomponent.no`) && PathPrefix(`/okonomi/regnskap`) && Headers(`x-org-id`, `mrfylke.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-okonomi-regnskap
          port: 8080
